--- a/templates/eminence/eminence.hbs
+++ b/templates/eminence/eminence.hbs
@@ -2,54 +2,40 @@
 <section class="eminence-main standard-form">
 
   <div class="col-1">
+    <!-- Personnage -->
+    {{> "systems/penombre/templates/eminence/partials/personnage.hbs" }}
 
-  <!-- Personnage -->
-  {{> "systems/penombre/templates/eminence/partials/personnage.hbs" }}
+    <!-- Harmoniques -->
+    {{> "systems/penombre/templates/eminence/partials/harmoniques.hbs" }}
 
-  <!-- Harmoniques -->
-  {{> "systems/penombre/templates/eminence/partials/harmoniques.hbs" }}
-
-  <!-- Conscience -->
-  {{> "systems/penombre/templates/eminence/partials/conscience.hbs" }}
-
+    <!-- Conscience -->
+    {{> "systems/penombre/templates/eminence/partials/conscience.hbs" }}
   </div>
 
   <div class="col-2 frise-verticale">
-      <div classe="grande-frise-verticale-1">
-      <img
-      class=""
-      src="/systems/penombre/assets/ui/marron.png"
-      alt="|" />
+      <div class="grande-frise-verticale-1">
+        <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
       </div>
-      <div classe="grande-frise-verticale-2">
-      <img
-      class=""
-      src="/systems/penombre/assets/ui/marron.png"
-      alt="|" />
+      <div class="grande-frise-verticale-2">
+        <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
       </div>
-      <div classe="grande-frise-verticale-3">
-      <img
-      class=""
-      src="/systems/penombre/assets/ui/marron.png"
-      alt="|" />
+      <div class="grande-frise-verticale-3">
+        <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
       </div>
-
   </div>
 
   <div class="col-3">
+    <!-- Timbre -->
+    {{> "systems/penombre/templates/eminence/partials/timbre.hbs" }}
 
-  <!-- Timbre -->
-  {{> "systems/penombre/templates/eminence/partials/timbre.hbs" }}
+    <!-- Pouvoirs -->
+    {{> "systems/penombre/templates/eminence/partials/pouvoirs.hbs" }}
 
-  <!-- Pouvoirs -->
-  {{> "systems/penombre/templates/eminence/partials/pouvoirs.hbs" }}
+    <!-- Atouts -->
+    {{> "systems/penombre/templates/eminence/partials/atouts.hbs" }}
 
-  <!-- Atouts -->
-  {{> "systems/penombre/templates/eminence/partials/atouts.hbs" }}
-
-  <!-- Maitrises magiques -->
-  {{> "systems/penombre/templates/eminence/partials/maitrises.hbs" }}
-
+    <!-- Maitrises magiques -->
+    {{> "systems/penombre/templates/eminence/partials/maitrises.hbs" }}
   </div>
   
 </section>
