--- a/penombre.css
+++ b/penombre.css
@@ -1,3 +1,45 @@
+penombre-toggle-switch {
+  --toggle-switch-height: 20px;
+  --toggle-switch-width: 36px;
+  --toggle-switch-padding: 3px;
+  --toggle-switch-track-color-unchecked: black;
+  --toggle-switch-track-color-checked: #3ba55d;
+  --toggle-switch-thumb-color: white;
+  --toggle-switch-thumb-width: calc(var(--toggle-switch-height) - var(--toggle-switch-padding) * 2);
+  --toggle-switch-thumb-height: var(--toggle-switch-thumb-width);
+  --toggle-switch-transition-time: 250ms;
+  cursor: var(--cursor-pointer) !important;
+  display: inline-block;
+  width: var(--toggle-switch-width);
+  height: var(--toggle-switch-height);
+}
+penombre-toggle-switch track {
+  background: var(--toggle-switch-track-color-unchecked);
+  border-radius: calc((var(--toggle-switch-height) * 2) / 3);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.45);
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  padding: var(--toggle-switch-padding);
+  width: 100%;
+}
+penombre-toggle-switch thumb {
+  background: var(--toggle-switch-thumb-color);
+  border-radius: 100%;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.45);
+  display: block;
+  height: var(--toggle-switch-thumb-height);
+  text-align: center;
+  transition: margin-left var(--toggle-switch-transition-time) ease;
+  width: var(--toggle-switch-thumb-width);
+}
+penombre-toggle-switch[checked] track {
+  background: var(--toggle-switch-track-color-checked);
+}
+penombre-toggle-switch[checked] thumb {
+  margin-left: calc(100% - var(--toggle-switch-thumb-width));
+}
 /* ---------------------------------------------
         Variables LESS
 --------------------------------------------- */
@@ -15,102 +57,105 @@
 /* ---------------------------------------------
         Mixins
 --------------------------------------------- */
-/* ---------------------------------------------
+.penombre {
+  /* ---------------------------------------------
         Eminence
 --------------------------------------------- */
-.eminence .eminence-content {
+}
+.penombre.eminence .eminence-content {
   overflow: auto;
   background-color: #faeed6;
+  /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
   font-family: "CattedraleDemo";
   color: #a56135;
   font-size: 17px;
 }
-.eminence .eminence-content input,
-.eminence .eminence-content select {
+.penombre.eminence .eminence-content input,
+.penombre.eminence .eminence-content select {
   border-color: #a56135;
   color: #56605b;
   font-family: "ChocoCovRainBold";
   font-size: 29px;
 }
-.eminence .eminence-content .eminence-main {
+.penombre.eminence .eminence-content .eminence-main {
   width: 1100px;
   display: flex;
   display: table;
   clear: both;
 }
-.eminence .eminence-content .col-1 {
+.penombre.eminence .eminence-content .col-1 {
   width: 450px;
   float: left;
   display: table;
   clear: both;
 }
-.eminence .eminence-content .col-2 {
+.penombre.eminence .eminence-content .col-2 {
   width: 23px;
   float: left;
   height: 500px;
   padding: 0 3px;
 }
-.eminence .eminence-content .col-2 .grande-frise-verticale-1,
-.eminence .eminence-content .col-2 .grande-frise-verticale-2,
-.eminence .eminence-content .col-2 .grande-frise-verticale-3 {
+.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-1,
+.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-2,
+.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-3 {
   flex-direction: column;
 }
-.eminence .eminence-content .col-3 {
+.penombre.eminence .eminence-content .col-3 {
   width: 625px;
   float: left;
 }
-.eminence .eminence-content .col-1-1 {
+.penombre.eminence .eminence-content .col-1-1 {
   width: 25px;
   float: left;
 }
-.eminence .eminence-content .col-2-1 {
+.penombre.eminence .eminence-content .col-2-1 {
   width: 8px;
   float: left;
 }
-.eminence .eminence-content .col-3-1 {
+.penombre.eminence .eminence-content .col-3-1 {
   width: 410px;
   float: left;
   flex-direction: column;
   padding-left: 4px;
 }
-.eminence .eminence-content .eminence-personnage,
-.eminence .eminence-content .eminence-harmoniques,
-.eminence .eminence-content .eminence-conscience,
-.eminence .eminence-content .eminence-timbre,
-.eminence .eminence-content .eminence-pouvoirs,
-.eminence .eminence-content .eminence-atouts,
-.eminence .eminence-content .eminence-maitrises {
+.penombre.eminence .eminence-content .eminence-personnage,
+.penombre.eminence .eminence-content .eminence-harmoniques,
+.penombre.eminence .eminence-content .eminence-conscience,
+.penombre.eminence .eminence-content .eminence-timbre,
+.penombre.eminence .eminence-content .eminence-pouvoirs,
+.penombre.eminence .eminence-content .eminence-atouts,
+.penombre.eminence .eminence-content .eminence-maitrises {
   float: none;
   flex-direction: column;
   border: 1px solid #a56135;
   padding: 2px;
   border-radius: 6px;
 }
-.eminence .eminence-content .eminence-personnage {
+.penombre.eminence .eminence-content .eminence-personnage {
   height: 200px;
 }
-.eminence .eminence-content .eminence-harmoniques {
+.penombre.eminence .eminence-content .eminence-harmoniques {
   height: 475px;
 }
-.eminence .eminence-content .eminence-conscience {
+.penombre.eminence .eminence-content .eminence-conscience {
   height: 600px;
 }
-.eminence .eminence-content .text .font-doree {
+.penombre.eminence .eminence-content .text .font-doree {
   color: #917f35;
 }
-.eminence .eminence-content .text .font-grise {
+.penombre.eminence .eminence-content .text .font-grise {
   color: #56605b;
 }
-.eminence .eminence-content .text .font-marron {
+.penombre.eminence .eminence-content .text .font-marron {
   color: #a56135;
 }
-.eminence .eminence-content .text .font-chocolate {
+.penombre.eminence .eminence-content .text .font-chocolate {
   font-family: "ChocoCovRainBold";
 }
-.eminence .eminence-content .text .font-cattedrale {
+.penombre.eminence .eminence-content .text .font-cattedrale {
   font-family: "CattedraleDemo";
 }
-.eminence .eminence-content .text-vertical-personnage {
+.penombre.eminence .eminence-content .text-vertical-personnage {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -118,7 +163,7 @@
   font-size: 17px;
   text-align: center;
 }
-.eminence .eminence-content .text-vertical-harmoniques {
+.penombre.eminence .eminence-content .text-vertical-harmoniques {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -126,7 +171,7 @@
   font-size: 17px;
   text-align: center;
 }
-.eminence .eminence-content .text-vertical-conscience {
+.penombre.eminence .eminence-content .text-vertical-conscience {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -134,84 +179,88 @@
   font-size: 17px;
   text-align: center;
 }
-.eminence .eminence-content .eminence-harmoniques table {
-  width: 380px;
+.penombre.eminence .eminence-content .eminence-harmoniques .click:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 6px #af010a);
 }
-.eminence .eminence-content .eminence-harmoniques table tr {
+.penombre.eminence .eminence-content .eminence-harmoniques table {
+  width: 400px;
+}
+.penombre.eminence .eminence-content .eminence-harmoniques table tr {
   width: 600px;
 }
-.eminence .eminence-content .eminence-harmoniques table tr:nth-child(odd),
-.eminence .eminence-content .eminence-harmoniques table tr:nth-child(even) {
+.penombre.eminence .eminence-content .eminence-harmoniques table tr:nth-child(odd),
+.penombre.eminence .eminence-content .eminence-harmoniques table tr:nth-child(even) {
   background-color: transparent;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de {
   width: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-2-3 {
+.penombre.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-2-3 {
   float: none;
   width: 400px;
 }
-.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-1-3 {
+.penombre.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-1-3 {
   float: left;
   width: 410px;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de-mouve-1 {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-1 {
   float: none;
   margin-left: 40px;
   width: 85px;
   height: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de-mouve-2 {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-2 {
   float: none;
   margin-left: -40px;
   width: 85px;
   height: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de-mouve-3 {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-3 {
   float: none;
   margin-left: 10px;
   width: 85px;
   height: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de-mouve-4 {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-4 {
   float: none;
   margin-left: 5px;
   width: 85px;
   height: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .case-de-mouve-5 {
+.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-5 {
   float: none;
   margin-left: 65px;
   width: 85px;
   height: 85px;
 }
-.eminence .eminence-content .eminence-harmoniques .flexible {
+.penombre.eminence .eminence-content .eminence-harmoniques .flexible {
   position: relative;
   display: flex;
 }
-.eminence .eminence-content .eminence-harmoniques .absolue {
+.penombre.eminence .eminence-content .eminence-harmoniques .absolue {
   position: absolute;
   z-index: 5;
 }
-.eminence .eminence-content .eminence-harmonique .de-d-ame,
-.eminence .eminence-content .eminence-harmonique .de-d-esprit,
-.eminence .eminence-content .eminence-harmonique .de-d-etincelle,
-.eminence .eminence-content .eminence-harmonique .de-de-nature,
-.eminence .eminence-content .eminence-harmonique .de-de-nuit {
+.penombre.eminence .eminence-content .eminence-harmonique .de-d-ame,
+.penombre.eminence .eminence-content .eminence-harmonique .de-d-esprit,
+.penombre.eminence .eminence-content .eminence-harmonique .de-d-etincelle,
+.penombre.eminence .eminence-content .eminence-harmonique .de-de-nature,
+.penombre.eminence .eminence-content .eminence-harmonique .de-de-nuit {
   z-index: 3;
 }
-.eminence .eminence-content .eminence-harmonique .de-ame,
-.eminence .eminence-content .eminence-harmonique .de-esprit,
-.eminence .eminence-content .eminence-harmonique .de-etincelle,
-.eminence .eminence-content .eminence-harmonique .de-nature,
-.eminence .eminence-content .eminence-harmonique .de-nuit {
+.penombre.eminence .eminence-content .eminence-harmonique .de-ame,
+.penombre.eminence .eminence-content .eminence-harmonique .de-esprit,
+.penombre.eminence .eminence-content .eminence-harmonique .de-etincelle,
+.penombre.eminence .eminence-content .eminence-harmonique .de-nature,
+.penombre.eminence .eminence-content .eminence-harmonique .de-nuit {
   width: 20px;
   height: 20px;
 }
-.eminence .eminence-content .eminence-harmonique .text-gros-1,
-.eminence .eminence-content .eminence-harmonique .text-gros-2,
-.eminence .eminence-content .eminence-harmonique .text-gros-3,
-.eminence .eminence-content .eminence-harmonique .text-gros-4 {
+.penombre.eminence .eminence-content .eminence-harmonique .text-gros-1,
+.penombre.eminence .eminence-content .eminence-harmonique .text-gros-2,
+.penombre.eminence .eminence-content .eminence-harmonique .text-gros-3,
+.penombre.eminence .eminence-content .eminence-harmonique .text-gros-4 {
   float: none;
   font-size: 30px;
 }
