--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -1,17 +1,26 @@
-<div class="eminence-conscience">
-  <!-- Conscience -->
-  {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
-  {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
+{{log "conscience" this}}
+<div class="eminence-conscience flexible">
+  <div class="col-1-1 text-vertical-conscience">{{localize "PENOMBRE.ui.section.conscience"}}</div>
+  <div class="col-2-1 frise-verticale">
+    <img class="" src="/systems/penombre/assets/ui/doree.png" alt="|" />
+  </div>
+  <div class="col-3-1 flexible">
+    <div class="col-1-3">
+      <!-- Conscience -->
+      {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
+      {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
 
-  <!-- Complications -->
-  {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.une.fields.valeur value=systemSource.conscience.complications.une.valeur localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.valeur value=systemSource.conscience.complications.deux.valeur localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.valeur value=systemSource.conscience.complications.trois.valeur localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
-  {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.valeur value=systemSource.conscience.complications.quatre.valeur localize=true}}
+      <!-- Complications -->
+      {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.une.fields.valeur value=systemSource.conscience.complications.une.valeur localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.valeur value=systemSource.conscience.complications.deux.valeur localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.valeur value=systemSource.conscience.complications.trois.valeur localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
+      {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.valeur value=systemSource.conscience.complications.quatre.valeur localize=true}}
 
-  <!-- Jetons-->
+      <!-- Jetons-->
+    </div>
+  </div>
 </div>
