--- a/templates/eminence/eminence.hbs
+++ b/templates/eminence/eminence.hbs
@@ -22,6 +22,10 @@
       <div class="grande-frise-verticale-3">
         <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
       </div>
+      <div class="grande-frise-verticale-4">
+        <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
+      </div>
+
   </div>
 
   <div class="col-3">
