--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -75,8 +75,20 @@
   border-radius: @border-radius;
 }
 
+/* ---------------------------------------------
+        Interface de Foundry VTT
+--------------------------------------------- */
+
+#pause > img {
+  content: url("/systems/penombre/assets/ui/penombre_wheel.webp");
+  height: 192px;
+  width: 192px;
+  top: -45px;
+  left: calc(50% - 96px);
+}
+
 .penombre {
-  /* ---------------------------------------------
+/* ---------------------------------------------
         Eminence
 --------------------------------------------- */
 
