--- a/penombre.css
+++ b/penombre.css
@@ -62,100 +62,141 @@ penombre-toggle-switch[checked] thumb {
         Eminence
 --------------------------------------------- */
 }
-.penombre.eminence .eminence-content {
+
+.eminence .eminence-content {
   overflow: auto;
+}
+
+/* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
+.eminence .eminence-content {
   background-color: #faeed6;
-  /* Si et seulement si on est en mode clair (et pas sombre) de la fiche */
-  font-family: "CattedraleDemo";
-  color: #a56135;
-  font-size: 17px;
 }
-.penombre.eminence .eminence-content input,
-.penombre.eminence .eminence-content select {
-  border-color: #a56135;
-  color: #56605b;
-  font-family: "ChocoCovRainBold";
-  font-size: 29px;
+
+.eminence .eminence-content .eminence-harmoniques .click:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 6px #af010a);
 }
-.penombre.eminence .eminence-content .eminence-main {
+
+.eminence .eminence-content .eminence-main {
   width: 1100px;
   display: flex;
   display: table;
   clear: both;
 }
-.penombre.eminence .eminence-content .col-1 {
+
+.eminence .eminence-content .col-1 {
   width: 450px;
   float: left;
   display: table;
   clear: both;
 }
-.penombre.eminence .eminence-content .col-2 {
+
+.eminence .eminence-content .col-2 {
   width: 23px;
   float: left;
   height: 500px;
   padding: 0 3px;
 }
-.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-1,
-.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-2,
-.penombre.eminence .eminence-content .col-2 .grande-frise-verticale-3 {
-  flex-direction: column;
-}
-.penombre.eminence .eminence-content .col-3 {
+
+.eminence .eminence-content .col-3 {
   width: 625px;
   float: left;
 }
-.penombre.eminence .eminence-content .col-1-1 {
+
+.eminence .eminence-content .col-2 .grande-frise-verticale-1,
+.eminence .eminence-content .col-2 .grande-frise-verticale-2,
+.eminence .eminence-content .col-2 .grande-frise-verticale-3,
+.eminence .eminence-content .col-2 .grande-frise-verticale-4 {
+  flex-direction: column;
+}
+
+.eminence .eminence-content .col-1-1 {
   width: 25px;
   float: left;
 }
-.penombre.eminence .eminence-content .col-2-1 {
+
+.eminence .eminence-content .col-2-1 {
   width: 8px;
   float: left;
 }
-.penombre.eminence .eminence-content .col-3-1 {
+
+.eminence .eminence-content .col-3-1 {
   width: 410px;
   float: left;
   flex-direction: column;
   padding-left: 4px;
 }
-.penombre.eminence .eminence-content .eminence-personnage,
-.penombre.eminence .eminence-content .eminence-harmoniques,
-.penombre.eminence .eminence-content .eminence-conscience,
-.penombre.eminence .eminence-content .eminence-timbre,
-.penombre.eminence .eminence-content .eminence-pouvoirs,
-.penombre.eminence .eminence-content .eminence-atouts,
-.penombre.eminence .eminence-content .eminence-maitrises {
+
+.eminence .eminence-content .eminence-personnage,
+.eminence .eminence-content .eminence-harmoniques,
+.eminence .eminence-content .eminence-conscience,
+.eminence .eminence-content .eminence-timbre,
+.eminence .eminence-content .eminence-pouvoirs,
+.eminence .eminence-content .eminence-atouts,
+.eminence .eminence-content .eminence-maitrises {
   float: none;
   flex-direction: column;
   border: 1px solid #a56135;
   padding: 2px;
   border-radius: 6px;
 }
-.penombre.eminence .eminence-content .eminence-personnage {
+
+
+.eminence .eminence-content .eminence-personnage {
   height: 200px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques {
+
+.eminence .eminence-content .eminence-harmoniques {
   height: 475px;
 }
-.penombre.eminence .eminence-content .eminence-conscience {
+
+.eminence .eminence-content .eminence-conscience {
   height: 600px;
 }
-.penombre.eminence .eminence-content .text .font-doree {
+
+
+/* */
+.eminence .eminence-content .text .font-doree {
   color: #917f35;
 }
-.penombre.eminence .eminence-content .text .font-grise {
+
+/* */
+.eminence .eminence-content .text .font-grise {
   color: #56605b;
 }
-.penombre.eminence .eminence-content .text .font-marron {
+
+/* */
+.eminence .eminence-content .text .font-marron {
   color: #a56135;
 }
-.penombre.eminence .eminence-content .text .font-chocolate {
+
+/* */
+.eminence .eminence-content .text .font-chocolate {
   font-family: "ChocoCovRainBold";
 }
-.penombre.eminence .eminence-content .text .font-cattedrale {
+
+/* */
+.eminence .eminence-content .text .font-cattedrale {
   font-family: "CattedraleDemo";
 }
-.penombre.eminence .eminence-content .text-vertical-personnage {
+
+
+.eminence .eminence-content {
+  font-family: "CattedraleDemo";
+  color: #a56135;
+  font-size: 17px;
+}
+
+.eminence .eminence-content input,
+.eminence .eminence-content select {
+  border-color: #a56135;
+  color: #56605b;
+  font-family: "ChocoCovRainBold";
+  font-size: 29px;
+}
+
+
+.eminence .eminence-content .text-vertical-personnage {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -163,7 +204,8 @@ penombre-toggle-switch[checked] thumb {
   font-size: 17px;
   text-align: center;
 }
-.penombre.eminence .eminence-content .text-vertical-harmoniques {
+
+.eminence .eminence-content .text-vertical-harmoniques {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -171,7 +213,8 @@ penombre-toggle-switch[checked] thumb {
   font-size: 17px;
   text-align: center;
 }
-.penombre.eminence .eminence-content .text-vertical-conscience {
+
+.eminence .eminence-content .text-vertical-conscience {
   writing-mode: vertical-rl;
   text-orientation: sideways-left;
   font-family: "CattedraleDemo";
@@ -179,88 +222,187 @@ penombre-toggle-switch[checked] thumb {
   font-size: 17px;
   text-align: center;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .click:hover {
-  cursor: pointer;
-  filter: drop-shadow(0px 0px 6px #af010a);
-}
-.penombre.eminence .eminence-content .eminence-harmoniques table {
+
+/* */
+.eminence .eminence-content .eminence-harmoniques table {
   width: 400px;
-}
-.penombre.eminence .eminence-content .eminence-harmoniques table tr {
+  /* background-color: green; */
+} 
+
+.eminence .eminence-content .eminence-harmoniques table tr {
   width: 600px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques table tr:nth-child(odd),
-.penombre.eminence .eminence-content .eminence-harmoniques table tr:nth-child(even) {
+
+.eminence .eminence-content .eminence-harmoniques table tr:nth-child(odd) {
   background-color: transparent;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de {
+
+.eminence .eminence-content .eminence-harmoniques table tr:nth-child(even) {
+  background-color: transparent;
+}
+
+.eminence .eminence-content .eminence-harmoniques .case-de {
   width: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-2-3 {
+
+.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-2-3 {
   float: none;
   width: 400px;
+  /* background-color: yellow; */
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-1-3 {
+
+.eminence .eminence-content .eminence-harmoniques .col-3-1 .col-1-3 {
   float: left;
   width: 410px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-1 {
+
+
+.eminence .eminence-content .eminence-harmoniques .case-de-mouve-1 {
   float: none;
-  margin-left: 40px;
+  margin-left: 30px;
   width: 85px;
   height: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-2 {
+
+.eminence .eminence-content .eminence-harmoniques .case-de-mouve-2 {
   float: none;
-  margin-left: -40px;
+  margin-left: -50px;
   width: 85px;
   height: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-3 {
+
+.eminence .eminence-content .eminence-harmoniques .case-de-mouve-3 {
   float: none;
-  margin-left: 10px;
+  margin-left: 00px;
   width: 85px;
   height: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-4 {
-  float: none;
-  margin-left: 5px;
+
+.eminence .eminence-content .eminence-harmoniques .case-de-mouve-4 {
+  float:none;
+  margin-left: -5px;
   width: 85px;
   height: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .case-de-mouve-5 {
+
+.eminence .eminence-content .eminence-harmoniques .case-de-mouve-5 {
   float: none;
   margin-left: 65px;
   width: 85px;
   height: 85px;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .flexible {
+
+.eminence .eminence-content .eminence-harmoniques .flexible {
   position: relative;
   display: flex;
 }
-.penombre.eminence .eminence-content .eminence-harmoniques .absolue {
+
+
+.eminence .eminence-content .eminence-harmoniques .absolue {
   position: absolute;
   z-index: 5;
 }
-.penombre.eminence .eminence-content .eminence-harmonique .de-d-ame,
-.penombre.eminence .eminence-content .eminence-harmonique .de-d-esprit,
-.penombre.eminence .eminence-content .eminence-harmonique .de-d-etincelle,
-.penombre.eminence .eminence-content .eminence-harmonique .de-de-nature,
-.penombre.eminence .eminence-content .eminence-harmonique .de-de-nuit {
-  z-index: 3;
+
+
+.eminence .eminence-content .eminence-harmoniques .de-d-ame {
+  margin-left: 5px;
+  /* z-index: 3; */
+  /* width: 30px; */
+  /* margin-left: -50px; */
+  /* margin-top: -50px; */
 }
-.penombre.eminence .eminence-content .eminence-harmonique .de-ame,
-.penombre.eminence .eminence-content .eminence-harmonique .de-esprit,
-.penombre.eminence .eminence-content .eminence-harmonique .de-etincelle,
-.penombre.eminence .eminence-content .eminence-harmonique .de-nature,
-.penombre.eminence .eminence-content .eminence-harmonique .de-nuit {
+/*
+.eminence .eminence-content .eminence-harmoniques .de-ame {
   width: 20px;
   height: 20px;
 }
-.penombre.eminence .eminence-content .eminence-harmonique .text-gros-1,
-.penombre.eminence .eminence-content .eminence-harmonique .text-gros-2,
-.penombre.eminence .eminence-content .eminence-harmonique .text-gros-3,
-.penombre.eminence .eminence-content .eminence-harmonique .text-gros-4 {
+*/
+
+.eminence .eminence-content .eminence-harmoniques .de-d-esprit {
+  margin-left: 5px;
+  /* z-index: 3; */
+  /* width: 30px; */
+  /* margin-top: -50px; */
+}
+/*
+.eminence .eminence-content .eminence-harmoniques .de-esprit {
+  width: 20px;
+  height: 20px;
+}
+*/
+
+.eminence .eminence-content .eminence-harmoniques .de-d-etincelle {
+  margin-left: 5px;
+  /* z-index: 3; */
+  /* width: 30px; */
+  /* margin-left: -50px; */
+  /* margin-top: -50px; */
+}
+/*
+.eminence .eminence-content .eminence-harmoniques .de-etincelle {
+  width: 20px;
+  height: 20px;
+}
+*/
+
+
+.eminence .eminence-content .eminence-harmoniques .de-de-nature {
+  margin-left: 5px;
+  /* z-index: 3; */
+  /* width: 30px; */
+  /* margin-top: -50px; */
+}
+/*
+.eminence .eminence-content .eminence-harmoniques .de-nature {
+  width: 20px;
+  height: 20px;
+}
+*/
+
+
+.eminence .eminence-content .eminence-harmoniques .de-de-nuit {
+  margin-left: 5px;
+  /* z-index: 3; */
+  /* width: 30px; */
+  /* margin-left: 50px; */
+  /* margin-top: -50px; */
+}
+/*
+.eminence .eminence-content .eminence-harmoniques .de-nuit {
+  width: 20px;
+  height: 20px;
+}
+*/
+
+.eminence .eminence-content .eminence-harmoniques .text-gros-1 {
   float: none;
-  font-size: 30px;
+  font-size: 25px;
+}
+
+.eminence .eminence-content .eminence-harmoniques .text-gros-2 {
+  float: none;
+  font-size: 25px;
+}
+
+.eminence .eminence-content .eminence-harmoniques .text-gros-3 {
+  float: none;
+  font-size: 25px;
+}
+
+.eminence .eminence-content .eminence-harmoniques .text-gros-4 {
+  float: none;
+  font-size: 25px;
+}
+
+.eminence .eminence-content .eminence-harmoniques .text-gros-5 {
+  float: none;
+  font-size: 25px;
+}
+
+#pause > img {
+  content: url("/systems/penombre/assets/ui/penombre_wheel.webp");
+  height: 192px;
+  width: 192px;
+  top: -45px;
+  left: calc(50% - 96px);
 }
