--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -6,19 +6,76 @@
   </div>
   <div class="col-3-1 flexible">
     <div class="col-1-3">
+      {{#if unlocked}}
+
       <!-- Conscience -->
       {{formGroup systemFields.conscience.fields.valeur value=systemSource.conscience.valeur localize=true}}
       {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
 
       <!-- Complications -->
-      {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.une.fields.valeur value=systemSource.conscience.complications.une.valeur localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.valeur value=systemSource.conscience.complications.deux.valeur localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.valeur value=systemSource.conscience.complications.trois.valeur localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
-      {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.valeur value=systemSource.conscience.complications.quatre.valeur localize=true}}
+      <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
+      <div class="cadre-complications">
+        {{formGroup systemFields.conscience.fields.complications.fields.une.fields.description value=systemSource.conscience.complications.une.description localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.une.fields.valeur value=systemSource.conscience.complications.une.valeur localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.description value=systemSource.conscience.complications.deux.description localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.deux.fields.valeur value=systemSource.conscience.complications.deux.valeur localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.description value=systemSource.conscience.complications.trois.description localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.trois.fields.valeur value=systemSource.conscience.complications.trois.valeur localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.description value=systemSource.conscience.complications.quatre.description localize=true}}
+        {{formGroup systemFields.conscience.fields.complications.fields.quatre.fields.valeur value=systemSource.conscience.complications.quatre.valeur localize=true}}
+      </div>
+      {{else}}
+
+      <!-- Conscience -->
+      <div class="form-group">
+        <label>{{localize "PENOMBRE.ui.conscienceVal"}}</label>
+        <div class="form-fields">{{system.conscience.valeur}}</div>
+      </div>
+      <div class="form-group">
+        <label>{{localize "PENOMBRE.ui.conscienceMax"}}</label>
+        <div class="form-fields">{{system.conscience.max}}</div>
+      </div>
+
+      <!-- Complications -->
+      <p>{{localize "PENOMBRE.ui.complicationsListe"}}</p>
+      <div class="cadre-complications">
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.une.description"}}</label>
+          <div class="form-fields">{{system.conscience.complications.une.description}}</div>
+        </div>
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.une.valeur"}}</label>
+          <div class="form-fields">{{system.conscience.complications.une.valeur}}</div>
+        </div>
+
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.deux.description"}}</label>
+          <div class="form-fields">{{system.conscience.complications.deux.description}}</div>
+        </div>
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.deux.valeur"}}</label>
+          <div class="form-fields">{{system.conscience.complications.deux.valeur}}</div>
+        </div>
+
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.trois.description"}}</label>
+          <div class="form-fields">{{system.conscience.complications.trois.description}}</div>
+        </div>
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.trois.valeur"}}</label>
+          <div class="form-fields">{{system.conscience.complications.trois.valeur}}</div>
+        </div>
+
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.quatre.description"}}</label>
+          <div class="form-fields">{{system.conscience.complications.quatre.description}}</div>
+        </div>
+        <div class="form-group">
+          <label>{{localize "PENOMBRE.ui.complications.quatre.valeur"}}</label>
+          <div class="form-fields">{{system.conscience.complications.quatre.valeur}}</div>
+        </div>
+      </div>
+      {{/if}}
 
       <!-- Jetons-->
     </div>
