--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -174,7 +174,14 @@
 
       // Hauteurs spécifiques
       .eminence-personnage {
-        height: 200px;
+        height: 300px;
+        
+        .logo-frame {
+          height: 150px;
+          width: 180px;
+          display: flex;
+          justify-content: center;
+        }
       }
 
       .eminence-harmoniques {
