--- a/templates/eminence/partials/personnage.hbs
+++ b/templates/eminence/partials/personnage.hbs
@@ -4,6 +4,9 @@
     <img class="" src="/systems/penombre/assets/ui/marron.png" alt="|" />
   </div>
   <div class="col-3-1">
+    <div class="logo-frame">
+      <img class="logo-img" src="{{document.img}}" height="150" data-edit="img" title="{{document.name}}" />
+    </div>
     {{#if unlocked}}
     {{formGroup systemFields.peuple value=systemSource.peuple localize=true}}
     {{formGroup systemFields.cle value=systemSource.cle localize=true}}
